--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -9,9 +9,9 @@
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--    <link rel="shortcut icon" href="https://www.17sucai.com/2022/5/ekow512451/assets/images/favicon.ico">-->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <!-- Loader -->
@@ -42,16 +42,16 @@
                     <li class="list-inline-item dropdown notification-list hide-phone"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese <img
-                            src="/static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
+                            src="../static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
                         <div class="dropdown-menu dropdown-menu-right language-switch"><a class="dropdown-item"
                                                                                           href="#"><img
-                                src="/static/picture/italy_flag.jpg" alt=""
+                                src="../static/picture/italy_flag.jpg" alt=""
                                 height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/french_flag.jpg" alt="" height="16"><span>French
+                                src="../static/picture/french_flag.jpg" alt="" height="16"><span>French
                         </span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
+                                src="../static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
                         </span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
+                                src="../static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
                         </span></a></div>
                     </li><!-- notification-->
                     <li class="list-inline-item dropdown notification-list"><a
@@ -64,17 +64,17 @@
                             <div class="dropdown-item noti-title">
                                 <h5><span class="badge badge-danger float-right">745</span>Messages</h5>
                             </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
+                            <div class="notify-icon"><img src="../static/picture/avatar-2.jpg" alt="user-img"
                                                           class="img-fluid rounded-circle"></div>
                             <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
                                 text of the printing and typesetting industry.</small></p>
                         </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
+                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"
                                                           class="img-fluid rounded-circle"></div>
                             <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
                                 have 87 unread messages</small></p>
                         </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
+                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"
                                                           class="img-fluid rounded-circle"></div>
                             <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
                                 long established fact that a reader will</small></p>
@@ -90,29 +90,24 @@
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5>Notification(3)</h5>
-                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                            <p class="notify-details"><b>Your order is placed</b><small
-                                    class="text-muted">Dummy text of the printing and typesetting
-                                industry.</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
-                            <p class="notify-details"><b>New Message received</b><small
-                                    class="text-muted">You have 87 unread messages</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
-                            <p class="notify-details"><b>Your class is updated</b><small
-                                    class="text-muted">It is a long established fact that a reader
-                                will</small></p>
-                        </a><!-- All--><a href="javascript:void(0);" class="dropdown-item notify-item border-top">View
-                            All </a>
-                        </div>
+                                <h5>Notification</h5>
+                            </div>
+                            <!-- item-->
+                            <a href="{% url 'my_notifications' %}" class="dropdown-item notify-item">
+                                <div class="notify-icon bg-success">
+                                    <i class="mdi mdi-cart-outline"></i>
+                                </div>
+                                <p class="notify-details">
+                                    <b>我的消息</b>
+                                    <small class="text-muted">Dummy text of the printing and typesetting
+                                        industry.</small>
+                                </p>
+                            </a></div>
                     </li><!-- User-->
                     <li class="dropdown notification-list">
                         <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
                            href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                            <img src="/static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
+                            <img src="../static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
                         </a>
                         <span>{{ name }}</span>
                         <div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
@@ -407,7 +402,7 @@
                         <h5 class="header-title mb-4 mt-0">成绩雷达图对比
                         </h5>
                         <div>
-                            <img height="100%" width="100%" src="/static/image/1.png"/>
+                            <img height="100%" width="100%" src="../static/image/1.png"/>
                         </div>
                     </div>
                 </div>
@@ -423,27 +418,27 @@
                         </div>
                         <!--                        <h5 class="header-title mb-4 mt-0">综合发展能力</h5>-->
                         <div>
-                            <h6 class="header-title mb-4 mt-0">直达链接</h6></br>
-                            <a href="https://www.hunnu.edu.cn/">湖南师范大学官网</a></br></br>
-                            <a href="https://jwc.hunnu.edu.cn/">湖南师范大学教务处</a></br></br>
-                            <a href="http://jwglnew.hunnu.edu.cn">湖南师范大学教务系统</a></br></br>
-                            <a href="https://stustar.hunnu.edu.cn/">湖南师范大学学生工作处</a></br></br>
-                            <a href="https://www.neea.edu.cn/">中国教育考试网</a></br></br>
-                            <a href="https://cy.ncss.cn/">全国大学生创业服务网</a></br></br>
-                            <a href="https://www.guoxinlanqiao.com/">蓝桥杯大赛官网</a></br></br>
-                            <a href="https://gplt.patest.cn/regulation">天梯赛大赛官网</a></br></br>
-                            <a href="https://www.csdn.net/">CSDN-专业开发者社区</a></br></br>
+                            <h6 class="header-title mb-4 mt-0">直达链接</h6><br>
+                            <a href="https://www.hunnu.edu.cn/">湖南师范大学官网</a><br><br>
+                            <a href="https://jwc.hunnu.edu.cn/">湖南师范大学教务处</a><br><br>
+                            <a href="http://jwglnew.hunnu.edu.cn">湖南师范大学教务系统</a><br><br>
+                            <a href="https://stustar.hunnu.edu.cn/">湖南师范大学学生工作处</a><br><br>
+                            <a href="https://www.neea.edu.cn/">中国教育考试网</a><br><br>
+                            <a href="https://cy.ncss.cn/">全国大学生创业服务网</a><br><br>
+                            <a href="https://www.guoxinlanqiao.com/">蓝桥杯大赛官网</a><br><br>
+                            <a href="https://gplt.patest.cn/regulation">天梯赛大赛官网</a><br><br>
+                            <a href="https://www.csdn.net/">CSDN-专业开发者社区</a><br><br>
                         </div>
-                        </br></br>
+                        <br><br>
                         <div>
                             <h6 class="header-title mb-4 mt-0"><font color="black">学业预警情况</font></h6>
                             {% if ans == "满足毕业最低要求" %}
-                            <span><font color="green"><strong>{{ ans }}</strong></font></span></br></br>
+                            <span><font color="green"><strong>{{ ans }}</strong></font></span><br><br>
                             {% endif %}
                             {% if ans == "不满足毕业最低要求" %}
-                            <span><font color="red"><strong>{{ ans }}</strong></font></span></br></br>
+                            <span><font color="red"><strong>{{ ans }}</strong></font></span><br><br>
                             {% endif %}
-                            <a href="Academic_Early_Warning.html"><u>详细展开</u></a></br></br>
+                            <a href="Academic_Early_Warning.html"><u>详细展开</u></a><br><br>
                         </div>
                         <!--                        <ul class="list-unstyled list-inline text-center mb-0 mt-3">-->
                         <!--                            <li class="mb-2 list-inline-item text-muted font-13">-->
@@ -485,7 +480,7 @@
                                 <tbody>
                                 <tr>
                                     <td>
-                                        <img src="/static/picture/avatar-1.jpg" alt=""
+                                        <img src="../static/picture/avatar-1.jpg" alt=""
                                              class="thumb-sm rounded-circle mr-2">***
                                     </td>
                                     <td>专业技术能力</td>
@@ -496,7 +491,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img src="/static/picture/avatar-2.jpg" alt=""
+                                        <img src="../static/picture/avatar-2.jpg" alt=""
                                              class="thumb-sm rounded-circle mr-2">***
                                     </td>
                                     <td>创新创业能力</td>
@@ -508,7 +503,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <img src="/static/picture/avatar-3.jpg" alt=""
+                                        <img src="../static/picture/avatar-3.jpg" alt=""
                                              class="thumb-sm rounded-circle mr-2">***
                                     </td>
                                     <td>知识学习能力</td>
@@ -521,7 +516,7 @@
                                 <tr>
 
                                     <td>
-                                        <img src="/static/picture/avatar-4.jpg" alt=""
+                                        <img src="../static/picture/avatar-4.jpg" alt=""
                                              class="thumb-sm rounded-circle mr-2">***
                                     </td>
                                     <td>管理实践能力</td>
@@ -534,7 +529,7 @@
                                 <tr>
 
                                     <td>
-                                        <img src="/static/picture/avatar-5.jpg" alt=""
+                                        <img src="../static/picture/avatar-5.jpg" alt=""
                                              class="thumb-sm rounded-circle mr-2">***
                                     </td>
                                     <td>综合发展能力</td>
@@ -568,38 +563,38 @@
 </footer>
 <!-- End Footer -->
 <!-- jQuery -->
-<script src="/static/js/jquery.min.js">
+<script src="../static/js/jquery.min.js">
 </script>
-<script src="/static/js/popper.min.js">
+<script src="../static/js/popper.min.js">
 </script>
-<script src="/static/js/bootstrap.min.js">
+<script src="../static/js/bootstrap.min.js">
 </script>
-<script src="/static/js/modernizr.min.js">
+<script src="../static/js/modernizr.min.js">
 </script>
-<script src="/static/js/waves.js">
+<script src="../static/js/waves.js">
 </script>
-<script src="/static/js/jquery.slimscroll.js">
+<script src="../static/js/jquery.slimscroll.js">
 </script>
-<script src="/static/js/jquery.nicescroll.js">
+<script src="../static/js/jquery.nicescroll.js">
 </script>
-<script src="/static/js/jquery.scrollTo.min.js">
+<script src="../static/js/jquery.scrollTo.min.js">
 </script>
 <!-- KNOB JS -->
-<script src="/static/js/excanvas.js">
+<script src="../static/js/excanvas.js">
 </script>
-<script src="/static/js/jquery.knob.js">
+<script src="../static/js/jquery.knob.js">
 </script>
-<script src="/static/js/chart.min.js">
+<script src="../static/js/chart.min.js">
 </script>
-<script src="/static/js/dashboard.js">
+<script src="../static/js/dashboard.js">
 </script>
 <!-- App js -->
-<script src="/static/js/app.js">
+<script src="../static/js/app.js">
 </script>
 <div style="display:none;">
     <!--    <a href="https://smalltool.github.io/">扒站工具</a>-->
 </div>
 </body>
 </html>
-<script src="/static/js/console-ban.min.js">
+<script src="../static/js/console-ban.min.js">
 </script>
