--- a/USTD_Dev_all/templates/activity.html
+++ b/USTD_Dev_all/templates/activity.html
@@ -308,41 +308,25 @@
                             <thead>
                             <tr>
                                 <th style="width: 20%;">活动编号</th>
+                                <th style="width: 20%;">活动类型</th>
                                 <th style="width: 20%;">活动名称</th>
                                 <th style="width: 20%;">活动内容</th>
-                                <th style="width: 20%;">活动举办方</th>
-                                <th style="width: 20%;">报名方式</th>
+                                <th style="width: 20%;">活动时间</th>
                             </tr>
                             </thead>
                             <tbody>
                             {% for item in act_list %}
                             <tr>
-                                <td>{{ item.aid }}</td>
+                                <td>{{ item.id }}</td>
+                                <td>{{ item.category }}</td>
                                 <td>{{ item.aname }}</td>
                                 <td>{{ item.content }}</td>
-<<<<<<< HEAD
                                 <td>{{ item.time}}</td>
-                                <td>
                                 <td>
                                     <a href="/Application?id={{ item.id }}" id="a1">报名</a>
 
                                 </td>
-=======
-                                <td>{{ item.organizer }}</td>
-                                <td>{{ item.baoming}}</td>
->>>>>>> 7a9a20fdf8864799bfc1c23a4593d87c97d29d53
-                                <!--                                {% if item.zhuangtai == "T" %}-->
-                                <!--                                <td><font color="green">通过</font></td>-->
-                                <!--                                {% endif %}-->
-                                <!--                                {% if item.zhuangtai == "F" %}-->
-                                <!--                                <td><font color="red">未通过</font></td>-->
-                                <!--                                {% endif %}-->
-                                <!--                                {% if item.zhuangtai == "D" %}-->
-                                <!--                                <td><font color="#CEBE29">待审核</font></td>-->
-                                <!--                                {% endif %}-->
-                                <!--                                <td>-->
-                                <!--                                    <a href="/shenhe_delete.html?id={{ item.id }}">删除</a>-->
-                                <!--                                </td>-->
+
                             </tr>
                             {% endfor %}
                             </tbody>
