--- a/USTD_Dev_all/templates/index.html
+++ b/USTD_Dev_all/templates/index.html
@@ -249,6 +249,22 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="has-submenu">
+                        <a href="#">
+                            <i class="dripicons-blog">
+
+                            </i> 活动信息
+                        </a>
+                        <ul class="submenu megamenu">
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="activity.html">活动入口</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <!-- End navigation menu -->
             </div>
