--- a/USTD_Dev_all/templates/tables-editable.html
+++ b/USTD_Dev_all/templates/tables-editable.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -229,25 +229,25 @@
                             </li>
                         </ul>
                     </li>
-                </ul>
-                </li>
-                <li class="has-submenu">
-                    <a href="#">
-                        <i class="dripicons-blog">
+                    <li class="has-submenu">
+                        <a href="#">
+                            <i class="dripicons-device-desktop">
 
-                        </i>评分准则
-                    </a>
-                    <ul class="submenu megamenu">
-                        <li>
-                            <ul>
-                                <li>
-                                    <a href="form-editors.html">五大方面评分准则</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                            </i>评分准则
+                        </a>
+                        <ul class="submenu megamenu">
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="form-editors.html">五大方面评分准则</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
+                </li>
+
                 <!-- End navigation menu -->
             </div>
             <!-- end #navigation -->
@@ -286,7 +286,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="mt-0 header-title">材料提交</h4>
+                        <h4 class="mt-0 header-title" align="center">正在审核材料</h4>
                         <br>
                         <table class="table mb-0">
                             <thead>
@@ -301,7 +301,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            {% for item in shenhe_list %}
+                            {% for item in shenhe_list_D %}
                             <tr>
                                 <td>{{ item.no }}</td>
                                 <td>{{ item.miaoshu }}</td>
@@ -318,29 +318,168 @@
                                 <td><font color="#CEBE29">待审核</font></td>
                                 {% endif %}
                                 <td>
-                                    <a href="/shenhe_delete.html?id={{ item.id }}">删除</a>
+                                    <a href="/shenhe_delete.html?id={{ item.id }}" id="a1">撤回</a>
                                 </td>
                             </tr>
                             {% endfor %}
                             </tbody>
+
                         </table>
-                        <form enctype="multipart/form-data" action="tables-editable.html" method="post">
-                            {% csrf_token %}
-                            <p>学号：<input type="text" name="id" value={{ ID0 }} disabled="disabled"></p>
-                            <p>描述：<input type="text" name="miaoshu"></p>
-                            <p>
-                                类别：
-                                <select name="leibie">
+                    <HR style="FILTER:alpha(opacity=100,finishopacity=0,style=2)" width="80%"color=#987cb9 SIZE=10>
+                    <br>
+                    <br>
+                        <h3 class="mt-0 header-title" align="center" >不予通过材料</h3>
+                        <br>
+                        <table class="table mb-0">
+                            <thead>
+                            <tr>
+                                <th>学号</th>
+                                <th>证明材料描述</th>
+                                <th>所属类别</th>
+                                <th>加分项</th>
+                                <th>证明材料图片</th>
+                                <th>审核状态</th>
+
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for item in shenhe_list_F %}
+                            <tr>
+                                <td>{{ item.no }}</td>
+                                <td>{{ item.miaoshu }}</td>
+                                <td>{{ item.leibie }}</td>
+                                <td>{{ item.extra_points }}</td>
+                                <td><img height="100px" width="100px" src="{{ MEDIA_URL }}{{ item.image }}"></td>
+                                {% if item.zhuangtai == "T" %}
+                                <td><font color="green">通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "F" %}
+                                <td><font color="red">未通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "D" %}
+                                <td><font color="#CEBE29">待审核</font></td>
+                                {% endif %}
+
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    <HR style="FILTER:alpha(opacity=100,finishopacity=0,style=2)" width="80%"color=#987cb9 SIZE=10>
+                    <br>
+                    <br>
+                    <h4 class="mt-0 header-title" align="center">审核通过材料</h4>
+                        <br>
+                        <table class="table mb-0" >
+                            <thead>
+                            <tr>
+                                <th>学号</th>
+                                <th>证明材料描述</th>
+                                <th>所属类别</th>
+                                <th>加分项</th>
+                                <th>证明材料图片</th>
+                                <th>审核状态</th>
+
+
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for item in shenhe_list_T %}
+                            <tr>
+                                <td>{{ item.no }}</td>
+                                <td>{{ item.miaoshu }}</td>
+                                <td>{{ item.leibie }}</td>
+                                <td>{{ item.extra_points }}</td>
+                                <td><img height="100px" width="100px" src="{{ MEDIA_URL }}{{ item.image }}"></td>
+                                {% if item.zhuangtai == "T" %}
+                                <td><font color="green">通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "F" %}
+                                <td><font color="red">未通过</font></td>
+                                {% endif %}
+                                {% if item.zhuangtai == "D" %}
+                                <td><font color="#CEBE29">待审核</font></td>
+                                {% endif %}
+
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    <HR style="FILTER:alpha(opacity=100,finishopacity=0,style=2)" width="80%"color=#987cb9 SIZE=10>
+                    <br>
+                    <br>
+{#                        <form enctype="multipart/form-data" action="tables-editable.html" method="post">#}
+{#                            {% csrf_token %}#}
+{#                            <p>学号：<input type="text" name="id" value={{ ID0 }} disabled="disabled"></p>#}
+{#                            <p>描述：<input type="text" name="miaoshu"></p>#}
+{#                            <p>#}
+{#                                类别：#}
+{#                                <select name="leibie">#}
+{#                                    <option>创新创业</option>#}
+{#                                    <option>专业技术</option>#}
+{#                                    <option>管理实践</option>#}
+{#                                    <option>综合发展</option>#}
+{#                                </select>#}
+{#                            </p>#}
+{#                            <p>加分：<input type="text" name="extra_points"></p>#}
+{#                            <p>图片：<input type="file" name="image"></p>#}
+{#                            <input type="submit" value="upload">#}
+{#                        </form>#}
+                    <div class="rg_layout">
+		    <div class="rg_left">
+		        <p>提交审核材料</p>
+		    </div>
+
+		    <div class="rg_center">
+                <br><br><br><br><br>
+		        <div class="rg_form">
+		            <!--定义表单 form-->
+		            <form enctype="multipart/form-data" action="tables-editable.html" method="post">
+                        {% csrf_token %}
+		                <table>
+		                    <tr>
+		                        <td class="td_left"><label for="username">学号</label></td>
+		                        <td class="td_right"><input type="text" name="id" value={{ ID0 }} disabled="disabled" id="name"></td>
+		                    </tr>
+
+		                    <tr>
+		                        <td class="td_left"><label for="password">材料描述</label></td>
+		                        <td class="td_right"><input type="text" name="miaoshu" id="password" ></td>
+		                    </tr>
+
+		                    <tr>
+		                        <td class="td_left"><label for="email">类别</label></td>
+		                        <td class="td_right"><select name="leibie" style="width:200px;height: 20px">
                                     <option>创新创业</option>
                                     <option>专业技术</option>
                                     <option>管理实践</option>
                                     <option>综合发展</option>
-                                </select>
-                            </p>
-                            <p>加分：<input type="text" name="extra_points"></p>
-                            <p>图片：<input type="file" name="image"></p>
-                            <input type="submit" value="upload">
-                        </form>
+                                </select></td>
+		                    </tr>
+
+		                    <tr>
+		                        <td class="td_left"><label for="name">分值</label></td>
+		                        <td class="td_right"><input type="text" name="extra_points"id="name" placeholder="请输入加分值"></td>
+		                    </tr>
+
+		                    <tr>
+		                        <td class="td_left"><label for="tel">上传文件</label></td>
+		                        <td class="td_right"><input type="file" name="image" ></td>
+		                    </tr>
+
+		                    <tr>
+		                        <td colspan="2" align="center"><input type="submit" id="btn_sub" value="提交"></td>
+		                    </tr>
+		                </table>
+
+                    </form>
+
+		        </div>
+
+		    </div>
+
+
+		</div>
                     </div>
                 </div>
             </div>
@@ -379,5 +518,107 @@
 <script src="/static/js/table-edit.init.js"></script>
 <!-- App js -->
 <script src="/static/js/app.js"></script>
+<style type="text/css">
+    #a1:hover{
+        color: red;
+        background: transparent;
+        border-color: #bbb#fff#fff#aaa;
+    }   /*鼠标经过超链接的样式*/
+
+    #a1{/*完全清除超链接下划线效果*/
+        width: 50px;
+        font-size:20px;
+        text-decoration: none;
+        border:solid 1px;
+        color: #444;
+        background: burlywood;    /*超链接背景颜色*/
+        border-color: #fff#aaa#aaa#fff;
+        zoom: 1;      /*解决IE浏览器无法显示问题*/
+    }
+    *{
+		        margin: 0px;
+		        padding: 0px;
+		        box-sizing: border-box;
+		    }
+
+		    .rg_layout{
+		        width: 900px;
+		        height: 500px;
+		        border: 8px solid #EEEEEE;
+		        background-color: white;
+		        /*让div水平居中*/
+		        margin: auto;
+		    }
+
+		    .rg_left{
+		        /*border: 1px solid red;*/
+		        float: left;
+		        margin: 15px;
+		    }
+		    .rg_left > p:first-child{
+		        color:#FFD026;
+		        font-size: 20px;
+		    }
+
+		    .rg_left > p:last-child{
+		        color:#A6A6A6;
+		        font-size: 20px;
+
+		    }
+
+
+		    .rg_center{
+		        float: left;
+		       /* border: 1px solid red;*/
+
+		    }
+
+		    .rg_right{
+		        /*border: 1px solid red;*/
+		        float: right;
+		        margin: 15px;
+		    }
+
+		    .rg_right > p:first-child{
+		        font-size: 15px;
+
+		    }
+		    .rg_right p a {
+		        color:pink;
+		    }
+
+		    .td_left{
+		        width: 100px;
+		        text-align: right;
+		        height: 45px;
+		    }
+		    .td_right{
+		        padding-left: 50px ;
+		    }
+
+		    #username,#password,#email,#name,#tel,#birthday,#checkcode{
+		        width: 251px;
+		        height: 32px;
+		        border: 1px solid #A6A6A6 ;
+		        /*设置边框圆角*/
+		        border-radius: 5px;
+		        padding-left: 10px;
+		    }
+		    #checkcode{
+		        width: 110px;
+		    }
+
+		    #img_check{
+		        height: 32px;
+		        vertical-align: middle;
+		    }
+
+		    #btn_sub{
+		        width: 150px;
+		        height: 40px;
+		        background-color: #FFD026;
+		        border: 1px solid #FFD026 ;
+		    }
+</style>
 </body>
 </html>
