--- a/USTD_Dev_all/templates/error2.html
+++ b/USTD_Dev_all/templates/error2.html
@@ -8,9 +8,9 @@
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body><!-- Begin page -->
 <div class="accountbg"></div>
@@ -28,19 +28,19 @@
     </div>
 </div>
 <!-- jQuery -->
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/popper.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
-<script src="/static/js/modernizr.min.js"></script>
-<script src="/static/js/waves.js"></script>
-<script src="/static/js/jquery.slimscroll.js"></script>
-<script src="/static/js/jquery.nicescroll.js"></script>
-<script src="/static/js/jquery.scrollTo.min.js"></script>
+<script src="../static/js/jquery.min.js"></script>
+<script src="../static/js/popper.min.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/modernizr.min.js"></script>
+<script src="../static/js/waves.js"></script>
+<script src="../static/js/jquery.slimscroll.js"></script>
+<script src="../static/js/jquery.nicescroll.js"></script>
+<script src="../static/js/jquery.scrollTo.min.js"></script>
 <!-- KNOB JS -->
-<script src="/static/js/excanvas.js"></script>
-<script src="/static/js/jquery.knob.js"></script>
+<script src="../static/js/excanvas.js"></script>
+<script src="../static/js/jquery.knob.js"></script>
 <!-- App js -->
-<script src="/static/js/app.js"></script>
+<script src="../static/js/app.js"></script>
 </body>
 </html>
-<script src="/static/js/console-ban.min.js"></script>
+<script src="../static/js/console-ban.min.js"></script>
