--- a/USTD_Dev_all/templates/login.html
+++ b/USTD_Dev_all/templates/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=1280,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
     <title>大学生发展综合素质测评系统登录页面</title>
-    <link href="/static/css/vendor.style.css" rel="stylesheet">
-    <link href="/static/css/login.style.css" rel="stylesheet">
+    <link href="../static/css/vendor.style.css" rel="stylesheet">
+    <link href="../static/css/login.style.css" rel="stylesheet">
 </head>
 <body>
 <div id="mount">
