--- a/USTD_Dev_all/templates/password_change_form.html
+++ b/USTD_Dev_all/templates/password_change_form.html
@@ -1,3 +1,4 @@
+{% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +9,9 @@
     <meta content="Admin Dashboard" name="description">
     <meta content="Mannatthemes" name="author">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/style.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="../static/css/style.css" rel="stylesheet" type="text/css">
     <script>
 			function success()
 			{
@@ -25,40 +26,36 @@
 <body onload="success();">
 {% endif %}
 {% if res == "" %}
-<body>
 {% endif %}
 <!-- Loader -->
 <div id="preloader">
     <div id="status">
         <div class="spinner"></div>
     </div>
-</div><!-- Navigation Bar-->
+</div>
+<!-- Navigation Bar-->
 <header id="topnav">
     <div class="topbar-main">
         <div class="container-fluid">
             <!-- Logo container-->
-            <div class="logo"><a href="index.html" class="logo"><i
-                    class="mdi mdi-bowling text-success mr-1"></i><span
-                    class="hide-phone">大学生发展综合素质测评系统</span></a></div><!-- End Logo container-->
+            <div class="logo">
+                <a href="index.html" class="logo">
+                    <i class="mdi mdi-bowling text-success mr-1">
+
+                    </i>
+                    <span class="hide-phone">大学生发展综合素质测评系统</span>
+                </a>
+            </div>
+            <!-- End Logo container-->
             <div class="menu-extras topbar-custom">
                 <ul class="list-unstyled float-right mb-0">
                     <!-- language-->
-                    <li class="list-inline-item dropdown notification-list hide-phone"><a
-                            class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
-                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese <img
-                            src="/static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
-                        <div class="dropdown-menu dropdown-menu-right language-switch"><a class="dropdown-item"
-                                                                                          href="#"><img
-                                src="/static/picture/italy_flag.jpg" alt=""
-                                height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/french_flag.jpg" alt="" height="16"><span>French
-										</span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
-										</span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
-										</span></a></div>
+                    <li class="list-inline-item dropdown notification-list hide-phone">
+                        <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
+                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese
+                            <img src="../static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
                     </li><!-- notification-->
-                    <li class="dropdown notification-list"><a
+                    <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-mail noti-icon"></i><span
@@ -66,65 +63,63 @@
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5><span class="badge badge-danger float-right">745</span>Messages</h5>
-                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
-                                text of the printing and typesetting industry.</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
-                                have 87 unread messages</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
-                                long established fact that a reader will</small></p>
-                        </a><!-- All--><a href="javascript:void(0);"
-                                          class="dropdown-item notify-item border-top">View All </a>
+                                <h5><span class="badge badge-danger float-right">5</span>Messages</h5>
+                            </div>
+                            <!-- item-->
+                            <a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon">
+                                <img src="../static/picture/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle">
+                            </div>
+                            <p class="notify-details">
+                                <b>Charles M. Jones</b>
+                                <small class="text-muted">Dummy text of the printing and typesetting industry.</small>
+                            </p>
+                            </a>
+{#                            <!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+{#                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"#}
+{#                                                          class="img-fluid rounded-circle"></div>#}
+{#                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You#}
+{#                                have 87 unread messages</small></p>#}
+{#                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+{#                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"#}
+{#                                                          class="img-fluid rounded-circle"></div>#}
+{#                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a#}
+{#                                long established fact that a reader will</small></p>#}
+{#                            </a>#}
+                            <!-- All-->
+                            <a href="javascript:void(0);" class="dropdown-item notify-item border-top">
+                                View All
+                            </a>
                         </div>
                     </li><!-- notification-->
-                    <li class="dropdown notification-list"><a
+                    <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-bell noti-icon"></i><span
-                            class="badge badge-success noti-icon-badge">2</span></a>
+                            class="badge badge-success noti-icon-badge">{% notifications_unread %}</span></a>
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5>Notification(3)</h5>
-                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <h5>Notification</h5>
+                            </div><!-- item--><a href="{% url 'my_notifications' %}" class="dropdown-item notify-item">
                             <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                            <p class="notify-details"><b>Your order is placed</b><small
-                                    class="text-muted">Dummy text of the printing and typesetting
-                                industry.</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
-                            <p class="notify-details"><b>New Message received</b><small
-                                    class="text-muted">You have 87 unread messages</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
-                            <p class="notify-details"><b>Your item is shipped</b><small
-                                    class="text-muted">It is a long established fact that a reader
-                                will</small></p>
-                        </a><!-- All--><a href="javascript:void(0);"
-                                          class="dropdown-item notify-item border-top">View All </a>
+                            我的消息<span class="badge unread-count">{% notifications_unread %}</span>
+                            <br><small class="text-muted">My Messages</small>
+                        </a>
                         </div>
                     </li><!-- User-->
-                    <li class="dropdown notification-list"><a
-                            class="nav-link dropdown-toggle arrow-none waves-effect nav-user"
-                            data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
-                            aria-expanded="false"><img src="/static/picture/avatar-1.jpg" alt="user"
-                                                       class="rounded-circle"></a>
+                    <li class="dropdown notification-list">
+                        <a class="nav-link dropdown-toggle arrow-none waves-effect nav-user" data-toggle="dropdown"
+                           href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                            <img src="../static/picture/avatar-1.jpg" alt="user" class="rounded-circle">
+                        </a>
                         <span>{{ name }}</span>
                         <div class="dropdown-menu dropdown-menu-right profile-dropdown  border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
-                            <a class="dropdown-item" href="http://127.0.0.1:8000/login/infor.html">
+                            <a class="dropdown-item" href="/login/infor.html">
                                 <i class="mdi mdi-account-circle m-r-5 text-muted">
                                 </i>用户信息</a>
                             <a class="dropdown-item" href="#">
@@ -143,15 +138,25 @@
                         </div>
                     </li>
                     <li class="menu-item">
-                        <!-- Mobile menu toggle--><a class="navbar-toggle nav-link">
-                        <div class="lines"><span></span><span></span><span></span></div>
-                    </a><!-- End mobile menu toggle-->
+                        <!-- Mobile menu toggle-->
+                        <a class="navbar-toggle nav-link">
+                            <div class="lines">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </a>
+                        <!-- End mobile menu toggle-->
                     </li>
                 </ul>
-            </div><!-- end menu-extras -->
-            <div class="clearfix"></div>
-        </div><!-- end container -->
-    </div><!-- end topbar-main -->
+            </div>
+            <!-- end menu-extras -->
+            <div class="clearfix">
+            </div>
+        </div>
+        <!-- end container -->
+    </div>
+    <!-- end topbar-main -->
     <!-- MENU Start -->
     <div class="navbar-custom">
         <div class="container-fluid">
@@ -218,7 +223,7 @@
                                     <li>
                                         <a href="suggestion/4/">管理实践推荐</a>
                                     </li>
-                                    </li>
+
                                 </ul>
                             </li>
                             <li class="has-submenu">
@@ -247,6 +252,22 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="has-submenu">
+                        <a href="#">
+                            <i class="dripicons-blog">
+
+                            </i> 活动信息
+                        </a>
+                        <ul class="submenu megamenu">
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="activity.html">活动入口</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <!-- End navigation menu -->
             </div>
@@ -255,7 +276,8 @@
         <!-- end container -->
     </div>
     <!-- end navbar-custom -->
-</header><!-- End Navigation Bar-->
+</header>
+<!-- End Navigation Bar-->
 <div class="wrapper">
     <div class="container-fluid">
         <!-- Page-Title -->
@@ -304,10 +326,10 @@
                                         <input type="text" size="20" id="old_password" name="old_password"
                                                placeholder="旧密码"/>
                                         {% if pwd_error1 == "您的旧密码输入错误，请仔细检查重新输入" %}
-                                        </br><span><font color="red"><strong>{{ pwd_error1 }}</strong></font></span>
+                                        <br><span><font color="red"><strong>{{ pwd_error1 }}</strong></font></span>
                                         {% endif %}
                                         {% if pwd_error4 == "您的新密码与旧密码一致，请仔细检查重新输入" %}
-                                        </br><span><font color="red"><strong>{{ pwd_error4 }}</strong></font></span>
+                                        <br><span><font color="red"><strong>{{ pwd_error4 }}</strong></font></span>
                                         {% endif %}
                                     </td>
                                 </tr>
@@ -317,10 +339,10 @@
                                         <input type="text" size="20" id="new_password1" name="new_password1"
                                                placeholder="新密码"/>
                                         {% if pwd_error2 == "您的新密码与确认密码不一致，请仔细检查重新输入" %}
-                                        </br><span><font color="red"><strong>{{ pwd_error2 }}</strong></font></span>
+                                        <br><span><font color="red"><strong>{{ pwd_error2 }}</strong></font></span>
                                         {% endif %}
                                         {% if pwd_error3 == "您的新密码与确认密码存在空值，请仔细检查重新输入" %}
-                                        </br><span><font color="red"><strong>{{ pwd_error3 }}</strong></font></span>
+                                        <br><span><font color="red"><strong>{{ pwd_error3 }}</strong></font></span>
                                         {% endif %}
                                     </td>
                                 </tr>
@@ -351,23 +373,23 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</div>
         </div>
     </div>
 </footer><!-- End Footer -->
 <!-- jQuery -->
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/popper.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
-<script src="/static/js/modernizr.min.js"></script>
-<script src="/static/js/waves.js"></script>
-<script src="/static/js/jquery.slimscroll.js"></script>
-<script src="/static/js/jquery.nicescroll.js"></script>
-<script src="/static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
-<script src="/static/js/excanvas.js"></script>
-<script src="/static/js/jquery.knob.js"></script><!-- App js -->
-<script src="/static/js/app.js"></script>
-<script src="/static/js/console-ban.min.js"></script>
+<script src="../static/js/jquery.min.js"></script>
+<script src="../static/js/popper.min.js"></script>
+<script src="../static/js/bootstrap.min.js"></script>
+<script src="../static/js/modernizr.min.js"></script>
+<script src="../static/js/waves.js"></script>
+<script src="../static/js/jquery.slimscroll.js"></script>
+<script src="../static/js/jquery.nicescroll.js"></script>
+<script src="../static/js/jquery.scrollTo.min.js"></script><!-- KNOB JS -->
+<script src="../static/js/excanvas.js"></script>
+<script src="../static/js/jquery.knob.js"></script><!-- App js -->
+<script src="../static/js/app.js"></script>
+<script src="../static/js/console-ban.min.js"></script>
 </body>
 </html>
 
