--- a/USTD_Dev_all/templates/suggestion.html
+++ b/USTD_Dev_all/templates/suggestion.html
@@ -1,3 +1,4 @@
+{% load notifications_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,39 +15,35 @@
     <link href="/static/css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<!-- Loader -->
-<div id="preloader">
-    <div id="status">
-        <div class="spinner">
-
-        </div>
-    </div>
-</div><!-- Navigation Bar-->
+{#<!-- Loader -->#}
+{#<div id="preloader">#}
+{#    <div id="status">#}
+{#        <div class="spinner">#}
+{##}
+{#        </div>#}
+{#    </div>#}
+{#</div>#}
+<!-- Navigation Bar-->
 <header id="topnav">
     <div class="topbar-main">
         <div class="container-fluid">
             <!-- Logo container-->
-            <div class="logo"><a href="http://127.0.0.1:8000/login/index.html" class="logo"><i
-                    class="mdi mdi-bowling text-success mr-1"></i><span
-                    class="hide-phone">大学生发展综合素质测评系统</span></a></div>
+            <div class="logo">
+                <a href="/login/index.html" class="logo">
+                    <i class="mdi mdi-bowling text-success mr-1">
+
+                    </i>
+                    <span class="hide-phone">大学生发展综合素质测评系统</span>
+                </a>
+            </div>
             <!-- End Logo container-->
             <div class="menu-extras topbar-custom">
-                <ul class="list-inline float-right mb-0">
+                <ul class="list-unstyled float-right mb-0">
                     <!-- language-->
-                    <li class="list-inline-item dropdown notification-list hide-phone"><a
-                            class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
-                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese <img
-                            src="/static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
-                        <div class="dropdown-menu dropdown-menu-right language-switch"><a class="dropdown-item"
-                                                                                          href="#"><img
-                                src="/static/picture/italy_flag.jpg" alt=""
-                                height="16"><span>Italian </span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/french_flag.jpg" alt="" height="16"><span>French
-										</span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/spain_flag.jpg" alt="" height="16"><span>Spanish
-										</span></a><a class="dropdown-item" href="#"><img
-                                src="/static/picture/russia_flag.jpg" alt="" height="16"><span>Russian
-										</span></a></div>
+                    <li class="list-inline-item dropdown notification-list hide-phone">
+                        <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
+                            href="#" role="button" aria-haspopup="false" aria-expanded="false">Chinese
+                            <img src="../static/picture/chinese_fiag.jpg" class="ml-2" height="16" alt=""></a>
                     </li><!-- notification-->
                     <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
@@ -56,51 +53,49 @@
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5><span class="badge badge-danger float-right">745</span>Messages</h5>
-                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-2.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Charles M. Jones</b><small class="text-muted">Dummy
-                                text of the printing and typesetting industry.</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-3.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You
-                                have 87 unread messages</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon"><img src="/static/picture/avatar-4.jpg" alt="user-img"
-                                                          class="img-fluid rounded-circle"></div>
-                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a
-                                long established fact that a reader will</small></p>
-                        </a><!-- All--><a href="javascript:void(0);"
-                                          class="dropdown-item notify-item border-top">View All </a>
+                                <h5><span class="badge badge-danger float-right">5</span>Messages</h5>
+                            </div>
+                            <!-- item-->
+                            <a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon">
+                                <img src="../static/picture/avatar-2.jpg" alt="user-img" class="img-fluid rounded-circle">
+                            </div>
+                            <p class="notify-details">
+                                <b>Charles M. Jones</b>
+                                <small class="text-muted">Dummy text of the printing and typesetting industry.</small>
+                            </p>
+                            </a>
+{#                            <!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+{#                            <div class="notify-icon"><img src="../static/picture/avatar-3.jpg" alt="user-img"#}
+{#                                                          class="img-fluid rounded-circle"></div>#}
+{#                            <p class="notify-details"><b>Thomas J. Mimms</b><small class="text-muted">You#}
+{#                                have 87 unread messages</small></p>#}
+{#                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">#}
+{#                            <div class="notify-icon"><img src="../static/picture/avatar-4.jpg" alt="user-img"#}
+{#                                                          class="img-fluid rounded-circle"></div>#}
+{#                            <p class="notify-details"><b>Luis M. Konrad</b><small class="text-muted">It is a#}
+{#                                long established fact that a reader will</small></p>#}
+{#                            </a>#}
+                            <!-- All-->
+                            <a href="javascript:void(0);" class="dropdown-item notify-item border-top">
+                                View All
+                            </a>
                         </div>
                     </li><!-- notification-->
                     <li class="list-inline-item dropdown notification-list"><a
                             class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown"
                             href="#" role="button" aria-haspopup="false" aria-expanded="false"><i
                             class="dripicons-bell noti-icon"></i><span
-                            class="badge badge-success noti-icon-badge">2</span></a>
+                            class="badge badge-success noti-icon-badge">{% notifications_unread %}</span></a>
                         <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg border-0">
                             <!-- item-->
                             <div class="dropdown-item noti-title">
-                                <h5>Notification(3)</h5>
-                            </div><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <h5>Notification</h5>
+                            </div><!-- item--><a href="{% url 'my_notifications' %}" class="dropdown-item notify-item">
                             <div class="notify-icon bg-success"><i class="mdi mdi-cart-outline"></i></div>
-                            <p class="notify-details"><b>Your order is placed</b><small
-                                    class="text-muted">Dummy text of the printing and typesetting
-                                industry.</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-warning"><i class="mdi mdi-message"></i></div>
-                            <p class="notify-details"><b>New Message received</b><small
-                                    class="text-muted">You have 87 unread messages</small></p>
-                        </a><!-- item--><a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-info"><i class="mdi mdi-glass-cocktail"></i></div>
-                            <p class="notify-details"><b>Your class is updated</b><small
-                                    class="text-muted">It is a long established fact that a reader
-                                will</small></p>
-                        </a><!-- All--><a href="javascript:void(0);"
-                                          class="dropdown-item notify-item border-top">View All </a>
+                            我的消息<span class="badge unread-count">{% notifications_unread %}</span>
+                            <br><small class="text-muted">My Messages</small>
+                        </a>
                         </div>
                     </li><!-- User-->
                     <li class="dropdown notification-list">
@@ -114,7 +109,7 @@
                             <div class="dropdown-item noti-title">
                                 <h5>Welcome,{{ name }}</h5>
                             </div>
-                            <a class="dropdown-item" href="http://127.0.0.1:8000/login/infor.html">
+                            <a class="dropdown-item" href="/login/infor.html">
                                 <i class="mdi mdi-account-circle m-r-5 text-muted">
                                 </i>用户信息</a>
                             <a class="dropdown-item" href="#">
@@ -132,16 +127,26 @@
                             </a>
                         </div>
                     </li>
-                    <li class="menu-item list-inline-item">
-                        <!-- Mobile menu toggle--><a class="navbar-toggle nav-link">
-                        <div class="lines"><span></span><span></span><span></span></div>
-                    </a><!-- End mobile menu toggle-->
+                    <li class="menu-item">
+                        <!-- Mobile menu toggle-->
+                        <a class="navbar-toggle nav-link">
+                            <div class="lines">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </a>
+                        <!-- End mobile menu toggle-->
                     </li>
                 </ul>
-            </div><!-- end menu-extras -->
-            <div class="clearfix"></div>
-        </div><!-- end container -->
-    </div><!-- end topbar-main -->
+            </div>
+            <!-- end menu-extras -->
+            <div class="clearfix">
+            </div>
+        </div>
+        <!-- end container -->
+    </div>
+    <!-- end topbar-main -->
     <!-- MENU Start -->
     <div class="navbar-custom">
         <div class="container-fluid">
@@ -165,7 +170,7 @@
                             <li>
                                 <ul>
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/tables-editable.html">上传审核材料</a>
+                                        <a href="/login/tables-editable.html">上传审核材料</a>
                                     </li>
                                 </ul>
                             </li>
@@ -182,7 +187,7 @@
                                 <a href="#">专业技术能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/suggestion/1/">专业技术推荐</a>
+                                        <a href="/login/suggestion/1/">专业技术推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -190,7 +195,7 @@
                                 <a href="#">创新创业能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/suggestion/2/">创新创业推荐</a>
+                                        <a href="/login/suggestion/2/">创新创业推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -198,7 +203,7 @@
                                 <a href="#">知识学习能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/suggestion/3/">知识学习推荐</a>
+                                        <a href="/login/suggestion/3/">知识学习推荐</a>
                                     </li>
                                 </ul>
                             </li>
@@ -206,38 +211,53 @@
                                 <a href="#">管理实践能力</a>
                                 <ul class="submenu">
                                     <li>
-                                        <a href="http://127.0.0.1:8000/login/suggestion/4/">管理实践推荐</a>
+                                        <a href="/login/suggestion/4/">管理实践推荐</a>
+                                    </li>
+
+                                </ul>
+                            </li>
+                            <li class="has-submenu">
+                                <a href="#">综合发展能力</a>
+                                <ul class="submenu">
+                                    <li>
+                                        <a href="/login/suggestion/5/">综合发展推荐</a>
                                     </li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="#">综合发展能力</a>
-                        <ul class="submenu">
+                        <a href="#">
+                            <i class="dripicons-blog">
+
+                            </i>评分准则
+                        </a>
+                        <ul class="submenu megamenu">
                             <li>
-                                <a href="http://127.0.0.1:8000/login/suggestion/5/">综合发展推荐</a>
+                                <ul>
+                                    <li>
+                                        <a href="/login/form-editors.html">五大方面评分准则</a>
+                                    </li>
+                                </ul>
                             </li>
                         </ul>
                     </li>
-                </ul>
-                </li>
-                <li class="has-submenu">
-                    <a href="#">
-                        <i class="dripicons-blog">
+                    <li class="has-submenu">
+                        <a href="#">
+                            <i class="dripicons-blog">
 
-                        </i>评分准则
-                    </a>
-                    <ul class="submenu megamenu">
-                        <li>
-                            <ul>
-                                <li>
-                                    <a href="http://127.0.0.1:8000/login/form-editors.html">五大方面评分准则</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
+                            </i> 活动信息
+                        </a>
+                        <ul class="submenu megamenu">
+                            <li>
+                                <ul>
+                                    <li>
+                                        <a href="/login/activity.html">活动入口</a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <!-- End navigation menu -->
             </div>
@@ -246,8 +266,8 @@
         <!-- end container -->
     </div>
     <!-- end navbar-custom -->
-
-</header><!-- End Navigation Bar-->
+</header>
+<!-- End Navigation Bar-->
 <div class="wrapper">
     <div class="container-fluid">
         <!-- Page-Title -->
@@ -286,7 +306,7 @@
 <footer class="footer">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12">© 2022 大学生发展综合素质测评系统</a></div>
+            <div class="col-12">© 2022 大学生发展综合素质测评系统</div>
         </div>
     </div>
 </footer><!-- End Footer -->
